# misinfo-eqa

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: demo.yaml  mvp.yaml  real_smoke.yaml
docs/: AUDIT_PROTOCOL.md  REPRODUCIBILITY.md  RESULTS.md  USAGE.md
examples/: demo.csv
misinfo_eqa/: __init__.py  audit.py  baselines.py  cli.py  config.py  io.py  metrics.py  pipeline.py  report.py  schema.py  stressors.py  text.py
paper/: README.md  misinfoeqa_paper.md  misinfoeqa_paper.tex  references.bib
tests/: test_audit.py  test_audit_summary.py  test_cli.py  test_pipeline.py  test_schema.py  test_stressors.py
